# tivac-rtic

./: .gitignore  Cargo.toml  Makefile.toml  README.md
.github/workflows/: build.yml
src/: main.rs
