[package]
name = "tivac-rtic"
version = "0.1.0"
authors = ["Rudo2204 <rudo2204@gmail.com>"]
edition = "2018"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.6"
cortex-m-semihosting = "0.3.7"
panic-halt = "0.2.0"
tm4c123x-hal = { git = "https://github.com/Rudo2204/tm4c-rs.git", branch = "tm4c123x-patch", features = ["rt"]}
embedded-hal = "0.2"
tm4c123x = { git = "https://github.com/rust-embedded-community/tm4c-rs.git"}
cortex-m-rtic = "0.5.6"
hd44780-driver = "0.4.0"
alloc-cortex-m = "0.4.1"
numtoa = "0.2.3"

[[bin]]
name = "tivac_rtic"
path = "src/main.rs"
test = false
bench = false

[profile.dev]
opt-level = 1
codegen-units = 16
debug = true
lto = false

[profile.release]
opt-level = "s"
codegen-units = 1
debug = true
lto = true

